[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["alloc", "rand_core", "digest"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { version = "0.8.5" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hex = "0.4"