[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

url = { version = "2.5.4" }
http = { version = "1.3.1" }
axum = { version = "0.8.3" }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }