[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
# io
tokio = { version = "1.44.1", features = ["full"] }

# crypto
curve25519-dalek = { version = "4.1.3", features = ["alloc", "rand_core", "digest"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = { version = "0.8.5" }

# helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hex = "0.4"