[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
# io
tokio = { version = "1.44.1", features = ["full"] }
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "gzip", "brotli", "deflate"] }
reqwest = { version = "0.12", features = ["json"]}
http = {version = "1.3.1" }

# crypto
curve25519-dalek = { version = "4.1.3", features = ["alloc", "rand_core", "digest"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = { version = "0.10" }
rand = { version = "0.8.5" }

# helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
hex = { version = "0.4" }