[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
# io
tokio = { version = "1.44.1", features = ["full"] }
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "gzip", "brotli", "deflate"] }
reqwest = { version = "0.12", features = ["json"]}
http = {version = "1.3.1" }

# crypto
curve25519-dalek = { version = "4.1.3", features = ["alloc", "rand_core", "digest"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = { version = "0.10" }
rand = { version = "0.8.5" }
hmac = { version = "0.12.1" }
chacha20poly1305 = { version = "0.10", features = ["heapless"] }
rust-argon2 = { version = "2.1.0" }

# helpers
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
base64 = { version = "0.13" }

[dev-dependencies]
hex = { version = "0.4" }